<resources>
	<string name="app_name">IntentExplorer</string>
	<string name="title_activity_details">DetailsActivity</string>
	<string name="send">Send</string>
	<string name="message">Message</string>
	<string name="intent_message">Message from Intent</string>
	<string name="send_back">Send back</string>
	<string name="message_sender_format">Message from %s</string>
	<string name="no_incoming_messages">No incoming messages</string>
	<string name="picture">Picture</string>
	<string name="title_activity_intents">IntentsActivity</string>
	<string name="browser">Browser</string>
	<string name="call">Call</string>
	<string name="camera">Camera</string>
</resources>
