<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="16dp"
	tools:context=".IntentsActivity">

	<Button
		android:id="@+id/browser_button"
		style="@style/Widget.AppCompat.Button.Colored"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/browser" />

	<Button
		android:id="@+id/camera_button"
		style="@style/Widget.AppCompat.Button.Colored"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/camera" />

	<Button
		android:id="@+id/call_button"
		style="@style/Widget.AppCompat.Button.Colored"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/call" />

</LinearLayout>
